--- a/templates/editor/editorForm.html.twig
+++ b/templates/editor/editorForm.html.twig
@@ -24,6 +24,49 @@
 
         {{ form_row(form.linkToOfficialPage) }}
 
+        {# Button to add the differents social medias #}
+        <div class="form-group row ">
+
+
+            <div class="col-form-label col-sm-2">&nbsp;</div>
+
+            <div id="socialMediaAccount-fields-list" class="col-sm-10 remove-collection-widget"
+
+                data-prototype="{{ form_widget(form.socialMediaAccounts.vars.prototype)|e }}"
+
+                data-editor="{{editorId}}"
+
+                data-widget-tags="{{ '<p></p>'|e }}"
+
+                data-widget-counter="{{ form.socialMediaAccounts|length }}">
+
+            {% for socialMediaAccountField in form.socialMediaAccounts %}
+
+                <p>
+
+                    {{ form_errors(socialMediaAccountField) }}
+
+                    {{ form_widget(socialMediaAccountField, {'attr': {'class': 'borders'}}) }}
+                </p>
+
+            {% endfor %}
+
+            </div>
+
+            <div class="borders remove-collection-widget"></div>
+
+        </div>
+        <div class="form-group row flex-action">
+
+            <button type="button" 
+
+                class="add-another-collection-widget button btn btn-success"
+                data-list-selector="#socialMediaAccount-fields-list">Ajouter un nouveau réseau social
+                
+            </button>
+
+        </div>
+
 
 
     {{ form_end(form) }}
