Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch WithoutTournament
Your branch is up to date with 'origin/WithoutTournament'.

Changes to be committed:
	modified:   public/css/home.css
	modified:   public/css/style.css
	modified:   public/js/home.js
	modified:   src/Controller/ApiController.php
	modified:   src/Controller/HomeController.php
	modified:   src/Repository/TournamentRepository.php
	modified:   templates/home/index.html.twig
	modified:   templates/topTeamsList.html.twig
	modified:   templates/topUsersList.html.twig

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -138,13 +138,13 @@ body{
     width: 100%;
     height: auto;
     min-height: 80vh;
-    background-image: url(../img/4d3uKwt812GoqIOoWCaUcKG.jpg);
+    background: radial-gradient(circle, rgba(130,143,160,1) 1%, rgba(118,134,157,1) 73%, rgba(24,40,84,1) 100%);
 }
 
 #container{
     width: 100%;
     margin: 0;
-    padding: 10px;
+    /* padding: 10px; */
     height: auto;
     min-height: 80vh;
 }
