--- a/templates/topTeamsList.html.twig
+++ b/templates/topTeamsList.html.twig
@@ -1,3 +1,5 @@
+<h4>Top 10 des équipes les plus suivies :</h4>
+
 <ol>
     {# loop to take the teams in the data base limited at 10 needed and the sort allows me to sort the teams by  #}
     {% for team in teams|sort((a, b) => b.users|length <=> a.users|length)|slice(0, 10) %}
