--- a/public/css/home.css
+++ b/public/css/home.css
@@ -12,7 +12,7 @@
     padding-bottom: 2em;
 }
 
-.homeContent section{
+.informationsContained{
     max-width: 60%;
     padding: 2em;
     text-align: center;
@@ -41,6 +41,7 @@
     align-items: center;
     justify-content: center;
     height: 100vh;
+    width: 100%;
     
 }
 
@@ -74,22 +75,33 @@
     margin: 0 auto;
 }
 
-.tournamentNameHome {
-    background: #DBF0FA;
-    padding: 11px;
-    padding-top: 15px;
-    padding-bottom: 15px;
-    margin-bottom: 0;
-    display: block;
-    border-bottom: 1px solid #e7e7e7;
+.tournamentsToDisplay{
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    gap: 30px;
+    justify-content: center;
+}
+
+.tournamentFigures{
+    width: 300px;
     position: relative;
-    text-decoration: none;
-    color: #2a2a2e;
+
+}
+
+.tournamentName{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+}
+
+.tournamentGameCover {
+    width: 100%; 
     border-radius: 10px;
     box-shadow: 2px #2a2a2e;
 }
 
-.tournamentNameHome i {
+.tournamentGameCover i {
     position: absolute;
     right: 3%;
     transition: 0.3s;
