--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,6 +4,59 @@
         <meta charset="UTF-8">
         <meta name="description" content="{% block meta_description %}{% endblock %}">
 
+        {# Script for tarte au citron a cookie manager #}
+        <script src="/tarteaucitron/tarteaucitron.js"></script>
+
+        <script type="text/javascript">
+            tarteaucitron.init({
+            "privacyUrl": "", /* Privacy policy url */
+            "bodyPosition": "bottom", /* or top to bring it as first element for accessibility */
+
+            "hashtag": "#tarteaucitron", /* Open the panel with this hashtag */
+            "cookieName": "tarteaucitron", /* Cookie name */
+        
+            "orientation": "middle", /* Banner position (top - bottom) */
+        
+            "groupServices": false, /* Group services by category */
+            "showDetailsOnClick": true, /* Click to expand the description */
+            "serviceDefaultState": "wait", /* Default state (true - wait - false) */
+                            
+            "showAlertSmall": false, /* Show the small banner on bottom right */
+            "cookieslist": false, /* Show the cookie list */
+                            
+            "closePopup": false, /* Show a close X on the banner */
+
+            "showIcon": true, /* Show cookie icon to manage cookies */
+            //"iconSrc": "", /* Optionnal: URL or base64 encoded image */
+            "iconPosition": "BottomRight", /* BottomRight, BottomLeft, TopRight and TopLeft */
+
+            "adblocker": false, /* Show a Warning if an adblocker is detected */
+                            
+            "DenyAllCta" : true, /* Show the deny all button */
+            "AcceptAllCta" : true, /* Show the accept all button when highPrivacy on */
+            "highPrivacy": true, /* HIGHLY RECOMMANDED Disable auto consent illegal in europe to not disable it */
+                            
+            "handleBrowserDNTRequest": false, /* If Do Not Track == 1, disallow all */
+
+            "removeCredit": false, /* Remove credit link */
+            "moreInfoLink": true, /* Show more info link */
+
+            "useExternalCss": false, /* If false, the tarteaucitron.css file will be loaded */
+            "useExternalJs": false, /* If false, the tarteaucitron.js file will be loaded */
+
+            //"cookieDomain": ".my-multisite-domaine.fr", /* Shared cookie for multisite */
+                            
+            "readmoreLink": "", /* Change the default readmore link */
+
+            "mandatory": true, /* Show a message about mandatory cookies */
+            "mandatoryCta": true, /* Show the disabled accept button when mandatory on */
+        
+            //"customCloserId": "" /* Optional a11y: Custom element ID used to open the panel */
+            });
+
+            (tarteaucitron.job = tarteaucitron.job || []).push('twitch');
+        </script>
+
 
         {# link for fontAwesome #}
         <script src="https://kit.fontawesome.com/d08e193109.js" crossorigin="anonymous"></script>
@@ -59,17 +112,11 @@
                     {# link to list of games #}
                     <li><a href="{{ path('app_game') }}">Jeux</a></li>
 
-                    {# link to list of editors #}
-                    <li><a href="{{ path('app_editor') }}">Editeurs</a></li>
-
                     {# link to list of teams #}
                     <li><a href="{{ path('app_team') }}">Equipes</a></li>
 
                     {# link to list of players #}
                     <li><a href="{{ path('app_player') }}">Joueurs</a></li>
-
-                    {# link to list of countries #}
-                    <li><a href="{{ path('app_country') }}">Pays</a></li>
                     
                     {# link to list of countries #}
                     <li><a href="{{ path('app_tournament') }}">Tournois</a></li>
@@ -182,6 +229,7 @@
             </div>
         </footer>
         {% block javascripts %}
+
 
             {# Link js for swiper #}
             <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
