--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -22,12 +22,12 @@
             {# This is the description of the home page with a link to register if it'a a vistitor #}
             <p>
                 Viens découvrir tes équipes <strong>d'esport</strong> préférées! <br>
-                Suis les résultats des tournois de tes <strong>jeux vidéos</strong> favoris!
+                Suis les résultats des tournois de tes <strong>jeux vidéo</strong> favoris!
                 
                 {% if not app.user %}
                     
                     {# Link to register for someone who isn't logged in #}
-                    <a href="{{ path('app_register') }}">Inscris-toi</a> pour faire des prédictions sur des matchs, inscrire ton nom parmi les meilleurs et suivre ton équipe favorite.
+                    <a href="{{ path('app_register') }}">Inscris-toi</a> ou <a href="{{ path('app_login') }}">Connecte-toi</a> si tu as déjà un compte, pour faire des prédictions sur des matchs, inscrire ton nom parmi les meilleurs et suivre ton équipe favorite.
                 
                 {% endif %} 
     
