Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch WithoutTournament
Your branch is up to date with 'origin/WithoutTournament'.

Changes to be committed:
	modified:   public/css/home.css
	modified:   public/css/style.css
	modified:   src/Service/FileUploaderAvatar.php
	modified:   src/Service/FileUploaderLogo.php
	modified:   templates/base.html.twig
	modified:   templates/tournament/tournamentDetails.html.twig

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -75,6 +75,10 @@
     margin: 0 auto;
 }
 
+#tournament-list h2{
+    margin-top: 2em;
+}
+
 .tournamentsToDisplay{
     display: flex;
     flex-wrap: wrap;
