--- a/public/css/style.css
+++ b/public/css/style.css
@@ -113,8 +113,10 @@ body{
     align-items: center;
 }
 
-#siteFooter p{
+#siteFooter p,
+#siteFooter a{
     margin: 0;
+    color: #fff;
 }
 
 .socialMedia{
@@ -174,6 +176,11 @@ ol{
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
+
+/* .topUsers h4,
+.topTeams h4{
+    padding: 30px;
+} */
 
 .topUsers a,
 .topTeams a{
