--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -113,7 +113,7 @@
                     <li><a href="{{ path('app_game') }}">Jeux</a></li>
 
                     {# link to list of teams #}
-                    <li><a href="{{ path('app_team') }}">Equipes</a></li>
+                    <li><a href="{{ path('app_team') }}">Équipes</a></li>
 
                     {# link to list of players #}
                     <li><a href="{{ path('app_player') }}">Joueurs</a></li>
@@ -218,7 +218,7 @@
             </figure>
 
             {# copyright.. #}
-            <p>&copy; 2023 - Esport Xpertise - <a href="#">Règlement</a> - <a href="#">Mentions légales</a></p>
+            <p>&copy; 2023 - Esport Xpertise - <a href="#">Règlement</a> - <a href="#">Mentions légales</a> - <a href="#">CGU</a> - <a href="#">Politique de confidentialité</a></p>
 
             {# Links to my own social medias #}
             <div class="socialMedia">
