--- a/templates/tournament/tournamentDetails.html.twig
+++ b/templates/tournament/tournamentDetails.html.twig
@@ -311,6 +311,14 @@
         </table>
     {% endif %}
 
+    <section id="videos">
+        <div class="video">
+            {# <iframe src="https://clips.twitch.tv/embed?clip=AgitatedBumblingMangetoutPRChase-5bRk_q5aWFG-hFr-&parent=www.example.com" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe> #}
+            <iframe width="1904" height="742" src="https://www.youtube.com/embed/IdlrYNIBBb0" title="😲 Girona est incroyable…" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+              
+        </div>
+
+    </section>
 
 
 
