Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch WithoutTournament
Your branch is up to date with 'origin/WithoutTournament'.

Changes to be committed:
	modified:   public/css/home.css
	modified:   public/css/style.css
	modified:   src/Controller/HomeController.php
	modified:   src/Controller/RosterController.php
	modified:   src/Controller/UserController.php
	modified:   templates/base.html.twig
	modified:   templates/home/index.html.twig
	modified:   templates/player/playerDetails.html.twig
	modified:   templates/security/userProfile.html.twig

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -175,6 +175,8 @@ ol{
     max-height: 300px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    position: sticky;
+    top: 40vh;
 }
 
 /* .topUsers h4,
