--- a/templates/security/userProfile.html.twig
+++ b/templates/security/userProfile.html.twig
@@ -20,6 +20,7 @@
 
 
     <a href="{{ path('edit_user', {'id': user.id}) }}"><input type="button" class="btn btn-warning" value="Modifier le compte"></a>
+    <a href="{{ path('delete_user', {'id': user.id}) }}"><input type="button" class="btn btn-danger" value="Supprimer le compte"></a>
 
 
 
