Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch WithoutTournament
Your branch is up to date with 'origin/WithoutTournament'.

Changes to be committed:
	modified:   src/Controller/CountryController.php
	modified:   src/Controller/RegistrationController.php
	modified:   src/Controller/UserController.php
	deleted:    src/Entity/Country.php
	modified:   templates/home/index.html.twig

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -17,7 +17,7 @@
         <article class="backgroundPicText">
 
             {# This is the title of the home page #}
-            <h1>Bienvenue sur Esport Xpertise {{ app.user == '' ? '' : app.user }} </h1>
+            <h1>Bienvenue sur Esport Xpertise {{ app.user ? app.user : '' }} </h1>
     
             {# This is the description of the home page with a link to register if it'a a vistitor #}
             <p>
