--- a/public/css/style.css
+++ b/public/css/style.css
@@ -172,17 +172,19 @@ ol{
     background: linear-gradient(135deg, rgba(255,255,255,1) 0%, rgba(140,203,233,1) 100%);
     width: auto;
     height: auto;
-    max-height: 300px;
+    min-height: 50vh;
+    max-height: 90vh;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     position: sticky;
-    top: 40vh;
+    top: 2em;
+    padding: 2em;
 }
 
-/* .topUsers h4,
+.topUsers h4,
 .topTeams h4{
-    padding: 30px;
-} */
+    text-align: center;
+}
 
 .topUsers a,
 .topTeams a{
@@ -194,9 +196,11 @@ ol{
 .topTeams ol{
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
-    justify-content: center;
+    /* align-items: flex-start; */
+    /* justify-content: center; */
+    gap: 1em;
     padding: 30px;
+    font-size: 1.5em;
 }
 
 /*********************************DELETE AND MODIFY BUTTONS ****************************************/
